// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutButton renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(AboutButton) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "button": "AboutButton-button-249",
        "input": "AboutButton-input-250",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "button": "AboutButton-button-249",
          "input": "AboutButton-input-250",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`AboutCard renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(AboutCard) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "bullet": "AboutCard-bullet-240",
        "card": "AboutCard-card-239",
        "pos": "AboutCard-pos-242",
        "title": "AboutCard-title-241",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "bullet": "AboutCard-bullet-240",
          "card": "AboutCard-card-239",
          "pos": "AboutCard-pos-242",
          "title": "AboutCard-title-241",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DarkSkyButton renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(DarkSkyButton) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "button": "DarkSkyButton-button-247",
        "input": "DarkSkyButton-input-248",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "button": "DarkSkyButton-button-247",
          "input": "DarkSkyButton-input-248",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DarkSkyCard renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(DarkSkyCard) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "bullet": "DarkSkyCard-bullet-244",
        "card": "DarkSkyCard-card-243",
        "pos": "DarkSkyCard-pos-246",
        "title": "DarkSkyCard-title-245",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "bullet": "DarkSkyCard-bullet-244",
          "card": "DarkSkyCard-card-243",
          "pos": "DarkSkyCard-pos-246",
          "title": "DarkSkyCard-title-245",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Gif renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Gif />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Image
        aspectRatio={1}
        color="#fff"
        disableError={false}
        disableSpinner={false}
        disableTransition={false}
        errorIcon={
          <pure(BrokenImageIcon)
            style={
              Object {
                "color": "#e0e0e0",
                "height": 48,
                "width": 48,
              }
            }
          />
        }
        loading={
          <WithStyles(CircularProgress)
            size={48}
          />
        }
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "aspectRatio": 1,
        "color": "#fff",
        "disableError": false,
        "disableSpinner": false,
        "disableTransition": false,
        "errorIcon": <pure(BrokenImageIcon)
          style={
            Object {
              "color": "#e0e0e0",
              "height": 48,
              "width": 48,
            }
          }
        />,
        "loading": <WithStyles(CircularProgress)
          size={48}
        />,
        "src": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Image
          aspectRatio={1}
          color="#fff"
          disableError={false}
          disableSpinner={false}
          disableTransition={false}
          errorIcon={
            <pure(BrokenImageIcon)
              style={
                Object {
                  "color": "#e0e0e0",
                  "height": 48,
                  "width": 48,
                }
              }
            />
          }
          loading={
            <WithStyles(CircularProgress)
              size={48}
            />
          }
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "aspectRatio": 1,
          "color": "#fff",
          "disableError": false,
          "disableSpinner": false,
          "disableTransition": false,
          "errorIcon": <pure(BrokenImageIcon)
            style={
              Object {
                "color": "#e0e0e0",
                "height": 48,
                "width": 48,
              }
            }
          />,
          "loading": <WithStyles(CircularProgress)
            size={48}
          />,
          "src": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`NavBar renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(NavBar) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "flex": "NavBar-flex-121",
        "menuButton": "NavBar-menuButton-122",
        "root": "NavBar-root-120",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "flex": "NavBar-flex-121",
          "menuButton": "NavBar-menuButton-122",
          "root": "NavBar-root-120",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`SimpleBottomNavigation renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(SimpleBottomNavigation) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "root": "SimpleBottomNavigation-root-213",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "root": "SimpleBottomNavigation-root-213",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`SimpleCard renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(SimpleCard) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "bullet": "SimpleCard-bullet-173",
        "card": "SimpleCard-card-172",
        "pos": "SimpleCard-pos-175",
        "title": "SimpleCard-title-174",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "bullet": "SimpleCard-bullet-173",
          "card": "SimpleCard-card-172",
          "pos": "SimpleCard-pos-175",
          "title": "SimpleCard-title-174",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders correctly 1`] = `
<div
  className="App"
>
  <div
    className="NavBar-root-120"
  >
    <header
      className="MuiPaper-root-132 MuiPaper-elevation4-138 MuiAppBar-root-123 MuiAppBar-positionStatic-127 MuiAppBar-colorPrimary-130"
    >
      <div
        className="MuiToolbar-root-159 blue-toolbar MuiToolbar-regular-161 MuiToolbar-gutters-160"
      >
        <i
          className="fas fa-cloud-sun-rain"
        />
        <b>
          THE WEATHER OUTSIDE
        </b>
      </div>
    </header>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "paddingTop": "calc(1 / 1 * 100%)",
          "position": "relative",
        }
      }
    >
      
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="MuiCircularProgress-root-163 MuiCircularProgress-colorPrimary-166 MuiCircularProgress-indeterminate-165"
          role="progressbar"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-168"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-169 MuiCircularProgress-circleIndeterminate-171"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-132 MuiPaper-elevation1-135 MuiPaper-rounded-133 MuiCard-root-176 SimpleCard-card-172"
  >
    <div
      className="MuiCardContent-root-177"
    >
      <p
        className="MuiTypography-root-178 MuiTypography-body1-187 MuiTypography-colorTextSecondary-211 MuiTypography-gutterBottom-205 SimpleCard-title-174"
      >
        Temperature
      </p>
      <h2
        className="MuiTypography-root-178 MuiTypography-h5-194"
      >
        0
        <span
          className="SimpleCard-bullet-173"
        >
          •
        </span>
        F
      </h2>
      <p
        className="MuiTypography-root-178 MuiTypography-body1-187 MuiTypography-colorTextSecondary-211 SimpleCard-pos-175"
      >
        Summary
      </p>
      <p
        className="MuiTypography-root-178 MuiTypography-body1-187"
      >
        <i>
          
        </i>
      </p>
    </div>
  </div>
  <div
    className="MuiBottomNavigation-root-214 SimpleBottomNavigation-root-213"
  >
    <button
      className="MuiButtonBase-root-220 MuiBottomNavigationAction-root-215 MuiBottomNavigationAction-selected-216"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiBottomNavigationAction-wrapper-218"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-223"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <span
          className="MuiBottomNavigationAction-label-219 MuiBottomNavigationAction-selected-216"
        >
          Home
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-232"
      />
    </button>
    <button
      className="MuiButtonBase-root-220 MuiBottomNavigationAction-root-215"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiBottomNavigationAction-wrapper-218"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-223"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
          />
        </svg>
        <span
          className="MuiBottomNavigationAction-label-219"
        >
          Darksky
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-232"
      />
    </button>
    <button
      className="MuiButtonBase-root-220 MuiBottomNavigationAction-root-215"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiBottomNavigationAction-wrapper-218"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-223"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
          />
        </svg>
        <span
          className="MuiBottomNavigationAction-label-219"
        >
          About
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-232"
      />
    </button>
  </div>
</div>
`;
